# flex_policies

1_basic_custom_policy/: Cargo.toml  flex_custom_policy_example.wasm
1_basic_custom_policy/src/: lib.rs
1_custom_policy_basic/src/: lib.rs
1_flex_custom_policy_example/: Cargo.toml
2_custom-auth-header/: Cargo.toml  custom_auth_header.wasm
2_custom-auth-header/src/: lib.rs
2_mule-flex-rust-policy/: schema.json
3_data-masking/: Cargo.toml  data_masking.wasm
3_data-masking/src/: lib.rs
3_data_masking/: schema.json
3_data_masking/src/: lib.rs
4_add-custom-header/: Cargo.toml
4_add-custom-header/src/: lib.rs
4_add_custom_header/: flex_custom_policy_auth_header.wasm  schema.json
5_delete_header/: Cargo.toml  delete_header.wasm
5_delete_header/src/: lib.rs
6_replace_body_field_and_value/: Cargo.toml  replace_body_field_and_value.wasm  schema.json
6_replace_body_field_and_value/src/: lib.rs
7_rate_limiter/: Cargo.toml  flex_custom_policy_auth_header.wasm  rate_limiter.wasm
7_rate_limiter/src/: lib.rs
